2014-08-20  Ramon Casero  <rcasero@gmail.com>

	* matlab/CardiacToolbox/blockface_find_frame_shifts.m: (0.4.0)

	- Change translation transform by similarity transform, because in
	some cases, frames shift not by translation but because the camera
	seems to zoom in or out a bit.

	- Tune the registration parameters so that they get a good precise
	registration between frames (e.g. switch to
	AdvancedMattesMutualInformation, make iteration steps smaller,
	etc.).

	- Don't return tnorm, as with similarity transforms it doesn't
	make much sense. Instead, we return all the parameters of the
	registration.

	- Use struct instead of file for registration parameters.

	- Swap input arguments so that path goes first, then file names.

	* matlab/FiltersToolbox/elastix.m: (0.2.0)

	- Input parameters for the registration can be a struct apart from
	a text file now.

	- Input images (whether input is a filename or array) that are RGB
	(colour) are now converted to grayscale before processing, because
	elastix will only use the first channel otherwise, and ignore the
	rest.

	- Rename input argument param -> opts.

	* Add matlab/FiltersToolbox/elastix_read_file2param.m: (0.1.0)

	- elastix_read_file2param Read file with elastix parameters to
	struct.

	* matlab/FiltersToolbox/elastix_read_reg_output: (0.2.0)

	- Move code to read TransformParameters.0.txt to independent
	function elastix_read_file2param().

	* matlab/FiltersToolbox/elastix_write_param2file.m: (0.1.1)

	- Update help header with new function.

2014-08-19  Ramon Casero  <rcasero@gmail.com>

	* matlab/FiltersToolbox/transformix: (0.1.1)

	- Check that T is either a struct or string. Correct the help
	header to note that it can be either.

	* Add matlab/FiltersToolbox/transformix: (0.1.0)

	- transformix Matlab interface to the image warping program
	"transformix".

	* Add matlab/FiltersToolbox/elastix_write_param2file.m: (0.1.0)

	- elastix_write_param2file Write struct with elastix parameters to
	file.
